# S3DR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake4.lua  set_clang_env.sh  todo.txt
Asset/: CMakeLists.txt
Asset/lib/asset/: 3D_shapes.hpp  open_gl_context.cpp  view_window.cpp  view_window.hpp
Asset/lib/src/asset/: 3D_shapes.cpp  3D_shapes.hpp  assimp_mesh_loader.cpp  assimp_mesh_loader.hpp  combined_operator.hpp  open_gl_context.cpp  open_gl_context.hpp  view_window.cpp  view_window.hpp
S3DR/: CMakeLists.txt  pre_build_tasks.sh  premake4.lua
S3DR/include/misc/: custom_exp.hpp  math_utils.hpp  subject.hpp
S3DR/include/model/: geometry_utils.hpp  model.hpp  point_object.hpp  scene_object.hpp  texture_shell_object.hpp
S3DR/include/open_gl/: model_adapter.hpp  open_gl_view_adapter.hpp  scene_manager.hpp  scene_settings.hpp
S3DR/include/open_gl/misc/: lights.hpp  program.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
S3DR/include/open_gl/object_adapters/: point_adapter.hpp  scene_object_adapter.hpp  shell_adapter.hpp
S3DR/include/open_gl/object_renderers/: shell_renderer.hpp  transparency_renderer.hpp
S3DR/include/open_gl/object_renderers/shaders/: DDPFinalFS.frag  DDPInitVS.vert  DDPPeelFS.frag  line_object_VS.vert  shell_object_FS.frag  texture_shell_object_VS.vert
S3DR/include/operator/: operator.hpp
S3DR/include/view/: camera.hpp  keyboard_events_dispatcher.hpp  projection.hpp  view_adapter.hpp
S3DR/lib/auxiliary/: geometry_object.cpp
S3DR/lib/model/: shell_object.cpp
S3DR/lib/open_gl/: model_adapter.hpp  scene_settings.cpp
S3DR/lib/open_gl/object_adapters/: point_adapter.cpp  scene_object_adapter.cpp  texture_shell_adapter.cpp
S3DR/lib/open_gl/object_renderers/: scene_object_renderer.cpp  texture_shell_renderer.cpp  transparency_renderer.cpp  transparency_renderer.hpp
S3DR/lib/open_gl/object_renderers/shaders/: shell_object_VS.vert
S3DR/lib/operator/: camera_operator.hpp  operator.cpp
S3DR/lib/src/auxiliary/: geometry_object.cpp  geometry_object.hpp  geometry_utils.hpp
S3DR/lib/src/model/: line_object.cpp  line_object.hpp  material_shell_object.cpp  material_shell_object.hpp  model.cpp  model.hpp  model_handler.cpp  model_handler.hpp  model_manager.cpp  model_manager.hpp  point_object.cpp  point_object.hpp  scene_object.cpp  scene_object.hpp  shell_object.cpp  shell_object.hpp  text_object.cpp  text_object.hpp  texture_shell_object.cpp  texture_shell_object.hpp
S3DR/lib/src/open_gl/: lights_handler.cpp  lights_handler.hpp  model_adapter.cpp  model_adapter.hpp  model_handler.cpp  model_handler.hpp  open_gl_view_adapter.cpp  open_gl_view_adapter.hpp  scene_manager.cpp  scene_manager.hpp  scene_renderer.cpp  scene_renderer.hpp  scene_settings.cpp  scene_settings.hpp
S3DR/lib/src/open_gl/misc/: base_texture.cpp  base_texture.hpp  lights.hpp  selection_texture.cpp  texture.cpp
S3DR/lib/src/open_gl/object_adapters/: line_adapter.cpp  line_adapter.hpp  material_shell_adapter.cpp  material_shell_adapter.hpp  point_adapter.cpp  point_adapter.hpp  scene_object_adapter.cpp  scene_object_adapter.hpp  shell_adapter.cpp  shell_adapter.hpp  text_adapter.cpp  text_adapter.hpp  texture_shell_adapter.cpp  (+1 more)
S3DR/lib/src/operator/: camera_operator.cpp  camera_operator.hpp  select_operator.cpp  select_operator.hpp
S3DR/lib/src/view/: camera.cpp  camera.hpp  light.cpp  light.hpp  lights_manager.cpp  lights_manager.hpp  projection.hpp  view.cpp  view.hpp  view_adapter.cpp  view_adapter.hpp
S3DR/lib/view/: keyboard_events_dispatcher.cpp  selection_set.cpp
S3DR/src/auxiliary/: geometry_object.cpp  geometry_object.hpp  geometry_utils.cpp
S3DR/src/lib/auxiliary/: geometry_object.hpp
S3DR/src/lib/model/: model.cpp  point_object.cpp  scene_object.cpp
S3DR/src/lib/open_gl/: model_adapter.cpp
S3DR/src/lib/operator/: camera_operator.cpp  select_operator.hpp
S3DR/src/lib/view/: mouse_events_dispatcher.cpp  view.cpp  view.hpp
S3DR/src/misc/: custom_operators.cpp
S3DR/src/model/: geometry_utils.cpp  line_object.hpp  model.hpp  scene_object.cpp  scene_object.hpp  shell_object.cpp  texture_shell_object.cpp
S3DR/src/open_gl/: model_adapter.cpp  open_gl_view_adapter.cpp  scene_manager.cpp  scene_settings.hpp
S3DR/src/open_gl/misc/: program.cpp  shader.cpp
S3DR/src/open_gl/object_adapters/: line_adapter.cpp  texture_shell_adapter.cpp  texture_shell_adapter.hpp
S3DR/src/open_gl/object_renderers/: point_renderer.cpp  scene_object_renderer.hpp  selection_renderer.hpp  texture_shell_renderer.cpp  texture_shell_renderer.hpp
S3DR/src/open_gl/techniques/: dual_depth_peeling.cpp  selection_texture.cpp
S3DR/src/operator/: select_operator.cpp
S3DR/src/tests/: main.cpp
S3DR/src/tests/misc/: 3D_shapes.cpp  assimp_mesh_loader.cpp  open_gl_context.hpp
S3DR/src/view/: camera.cpp  mouse_events_dispatcher.hpp  projection.cpp  selection_set.hpp  view.cpp  view.hpp  view_adapter.cpp
S3DR/tests/: auxiliary_tests.cpp  auxiliary_tests.hpp  line_tests.cpp  line_tests.hpp  main.cpp  misc.cpp  misc.hpp  model_tests.cpp  point_tests.cpp  point_tests.hpp  shell_tests.cpp  shell_tests.hpp  text_tests.cpp  text_tests.hpp
S3DR/tests/misc/: assimp_mesh_loader.cpp  combined_operator.cpp  open_gl_context.cpp  view_window.cpp
Utility/: CMakeLists.txt  premake4.lua
Utility/include/utility/: subject.hpp
Utility/lib/src/utility/: custom_operators.hpp  file_utils.hpp  math_utils.hpp  subject.hpp
Utility/lib/utility/: subject.cpp
Utility/src/lib/utility/: custom_operators.hpp
Utility/src/utility/: custom_operators.cpp  math_utils.cpp
Utility/tests/: main.cpp
tests/Asset/: CMakeLists.txt
tests/S3DR/: CMakeLists.txt
tests/S3DR/src/: main.cpp
tests/S3DR/src/auxiliary/: resources_handler.cpp  resources_handler.hpp  test_env.cpp  test_env.hpp
tests/S3DR/src/tests/: light_tests.cpp  light_tests.hpp  line_tests.cpp  model_tests.cpp  model_tests.hpp  point_tests.cpp  shell_tests.cpp  shell_tests.hpp  text_tests.cpp  text_tests.hpp
tests/Utility/: CMakeLists.txt
tests/Utility/src/: main.cpp  subject_tests.cpp  subject_tests.hpp
(+86 files in other folders)
