# S3DR - Small 3D renderer
# ========================

PROJECT(S3DR_ALL)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
  	message(FATAL_ERROR "\nIn-source builds are not allowed.")
endif()

SET(S3DR_MAJOR_VERSION 0)
SET(S3DR_MINOR_VERSION 1)
SET(S3DR_VERSION ${S3DR_MAJOR_VERSION}.${S3DR_MINOR_VERSION})

ADD_DEFINITIONS(-DLINUX
				-std=c++0x)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(Utility)
ADD_SUBDIRECTORY(Asset)
ADD_SUBDIRECTORY(S3DR)